target_sources(ucb-core
    PUBLIC
        pass-manager.hpp
        target.hpp
        target-machine.hpp
        backend/x64.hpp
        ir/basic-block.hpp
        ir/compile-unit.hpp
        ir/instruction.hpp
        ir/procedure.hpp
        ir/type.hpp
        ir/value.hpp
        isel/dag.hpp
        isel/dp-isel.hpp
        isel/isel.hpp
        isel/pat.hpp
    PRIVATE
        pass-manager.cpp
        target-machine.cpp
        ir/basic-block.cpp
        ir/compile-unit.cpp
        ir/instruction.cpp
        ir/machine-instruction.hpp
        ir/procedure.cpp
        isel/dag.cpp
        isel/dp-isel.cpp
        isel/pat.cpp
)

target_include_directories(ucb-core
    PUBLIC
        ${CMAKE_SOURCE_DIR}/src
)

target_link_libraries(ucb-core
    fmt::fmt
)
